--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <!-- mappers dependencies -->
 
         <!-- xml based + reflection based -->
-        <!-- NO GO -->
+        <!-- works, but NO GO -->
         <dependency>
             <groupId>com.github.dozermapper</groupId>
             <artifactId>dozer-core</artifactId>
@@ -48,7 +48,7 @@
         </dependency>
 
         <!-- needs maven plugin -->
-        <!-- NO GO -->
+        <!-- doesn't work, odd issues, NO GO -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
