--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,17 @@
 
     <groupId>org.example</groupId>
     <artifactId>testBeanMappers</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>mappers/dozer</module>
+        <module>mappers/jmapper</module>
+        <module>mappers/mapstruct</module>
+        <module>mappers/modelmapper</module>
+        <module>mappers/orika</module>
+        <module>common</module>
+    </modules>
 
     <properties>
         <maven.compiler.target>17</maven.compiler.target>
@@ -29,61 +39,6 @@
             <version>1.7.33</version>
         </dependency>
 
-        <!-- mappers dependencies -->
-
-        <!-- xml based + reflection based -->
-        <!-- works, but NO GO -->
-        <dependency>
-            <groupId>com.github.dozermapper</groupId>
-            <artifactId>dozer-core</artifactId>
-            <version>6.5.2</version>
-        </dependency>
-
-        <!-- issues with java 17 -->
-        <!-- NO GO -->
-        <dependency>
-            <groupId>ma.glasnost.orika</groupId>
-            <artifactId>orika-core</artifactId>
-            <version>1.5.4</version>
-        </dependency>
-
-        <!-- needs maven plugin -->
-        <!-- doesn't work, odd issues, NO GO -->
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-
-        <!-- issues with java 17 -->
-        <!-- NO GO -->
-        <dependency>
-            <groupId>com.googlecode.jmapper-framework</groupId>
-            <artifactId>jmapper-core</artifactId>
-            <version>1.6.0.1</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.thoughtworks.xstream</groupId>-->
-<!--            <artifactId>xstream</artifactId>-->
-<!--            <version>1.4.18</version>-->
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>xpp3</groupId>-->
-<!--                    <artifactId>xpp3_min</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>xmlpull</groupId>-->
-<!--                    <artifactId>xmlpull</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
-<!--        </dependency>-->
-
         <!-- test dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -93,26 +48,5 @@
         </dependency>
 
     </dependencies>
-
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.8.1</version>-->
-<!--                <configuration>-->
-<!--                    <source>17</source>-->
-<!--                    <target>17</target>-->
-<!--                    <annotationProcessorPaths>-->
-<!--                        <path>-->
-<!--                            <groupId>org.mapstruct</groupId>-->
-<!--                            <artifactId>mapstruct-processor</artifactId>-->
-<!--                            <version>1.4.2.Final</version>-->
-<!--                        </path>-->
-<!--                    </annotationProcessorPaths>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
 
 </project>
