--- a/mappers/mapstruct/pom.xml
+++ b/mappers/mapstruct/pom.xml
@@ -14,6 +14,7 @@
     <dependencies>
 
         <!-- needs maven plugin -->
+        <!-- generates code -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
