--- a/mappers/modelmapper/pom.xml
+++ b/mappers/modelmapper/pom.xml
@@ -12,6 +12,8 @@
     <artifactId>modelmapper</artifactId>
     <dependencies>
 
+        <!-- xml based + reflection based -->
+        <!-- NO GO due to mapping done through reflection -->
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
